# tictactoe

./: CMakeLists.txt  README.md  build.bat
include/: board.h  game.h
src/: board.cpp  game.cpp  main.cpp
